--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -334,6 +334,9 @@ on boot
     chown system graphics /sys/class/leds/lcd-backlight/cabc_level_ctl
     chown system system /sys/class/leds/lcd-backlight-nits/brightness
 
+    # Wifi firmware reload path
+    chown wifi wifi /sys/module/wlan/parameters/fwpath
+
 # Services start here
 
 service adsprpcd /system/bin/adsprpcd
